--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Legends -- Armenia (Republic)'
 - !lcsh 'Festivals -- Armenia (Republic)'
 - !lcc 'GR'
+- GITenberg
 title: Armenian Legends and Festivals
 url: http://www.gutenberg.org/ebooks/38129
